fix lack of padding on the browser window
text is unreadable otherwise, on small windows

--- a/site/libreboot.css
+++ b/site/libreboot.css
@@ -1,3 +1,4 @@
+html{padding:1em}
 body{
 	font:1em sans-serif;
 	line-height:1.4
